Make console expand easier to click, fix overflow in console (#1258)
* make console expand when tapped anywhere, fix overflow in console

- fixes the overflow issue in the embed consoles
- fixes usability issue where console expand button is hard to click.
  Now the the console can be expanded by clicking anywhere on the panel
  header.

closes #1232

* update test file

* change console-output-header to id instead of both id and css class

* re-add overflow:hidden to editor-container to fix scrolling issue

--- a/web/experimental/styles.scss
+++ b/web/experimental/styles.scss
@@ -189,11 +189,12 @@ body {
 
 // Console Output Footer
 
-.console-output-header {
+#console-output-header {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 #console-output-footer {
@@ -201,15 +202,15 @@ body {
   flex-direction: column;
   padding-left: 8px;
   padding-bottom: 8px;
+  overflow: auto;
 }
 
-#console-expand-button {
+#console-expand-icon {
   color: $label-color;
   padding: 8px;
-  margin: -4px;
 }
 
-#console-expand-button:focus {
+#console-expand-icon:focus {
   outline: none;
 }
 
@@ -239,7 +240,6 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
 }
 
 // Footer
